added more png and fixed text when correct answer displayed

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,12 @@ button:hover{
   z-index: 2;
 }
 
+.centerH1 {
+	display: flex;
+	text-align:center;
+	justify-content: center;
+}
+
 .mazeQuestions {
 	position:relative;
 	width:85%;
