--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,21 @@ button:hover{
 	margin: 10px;
 	padding: 10px;
 	font-size: 20px;
-	border-color: coral;
-	display: flex;
+	border-color: coral !important;
+	display: flex !important;
 	text-align:center;
 	justify-content: center;
+}
+
+.imgKeyBox{	
+	z-index: 100 !important;
+	padding: 5px !important;
+	border-color: coral !important;
+	border:rgb(93, 188, 243) !important;
+	display: inline !important;
+	text-align:center !important;
+	justify-content: center !important;
+	border-radius: 8px !important;
 }
 
 .mazeQuestions {
@@ -673,4 +684,17 @@ fieldset.pass_game  {
 	padding: 10px;
 	
 	display: flex;
+}
+
+.validAnsRadBtn{
+	display: flex;
+	flex-direction: column;
+	margin: auto;
+}
+
+.validAnsRadTD td{
+	display: flex;
+	width: 20%;
+	margin: auto;
+	text-align:center;
 }
